media querry issues fixed,code made readable2

--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -243,7 +243,7 @@ footer {
             border-top-left-radius: 30px;
             border-bottom-right-radius: 30px;
             border-top-right-radius: 30px;
-            padding: 14px 165px;
+            padding: 14px 0px;
             display: inline-block;
             margin-bottom: 25px;
             width: 100%;
