--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -425,6 +425,10 @@
       }
     }
 
+    #cart-content{
+      width: 375px;
+    }
+
     
   }
 }
